Fix invisible menu text on dark mode

--- a/docs/index.css
+++ b/docs/index.css
@@ -190,7 +190,10 @@ footer {
   }
   main > * {
     color: var(--clr-sec);
-  } 
+  }
+  .tab_btn {
+    filter: invert(.7);
+  }  
 }
 @keyframes moving {
   from{transform: translateX(50px);opacity: 0;}
